--- a/styles.css
+++ b/styles.css
@@ -105,8 +105,7 @@ html {
     align-items: center;
     width: 100%;
     height: 100vh;
-    background-color: #000;
-    background-image: linear-gradient(62deg, #3a3d40 0%, #181719 100%);
+    background-image: linear-gradient(62deg, #3a3d40 0%, #181719 100%), url('pp_paul.jpg');
   }
   .welcome-section > p {
     font-size: 3rem;
