--- a/styles.css
+++ b/styles.css
@@ -105,7 +105,8 @@ html {
     align-items: center;
     width: 100%;
     height: 100vh;
-    background-image: linear-gradient(62deg, #3a3d40 0%, #181719 100%), url('pp_paul.jpg');
+    background-image: linear-gradient(62deg, #3a3d40 0%, transparent 50%, #181719 100%), url('images/paulbw.jpg');
+    background-size: 100%;
   }
   .welcome-section > p {
     font-size: 3rem;
